--- a/AE_3D_200_Tanh_BatchNorm.ipynb
+++ b/AE_3D_200_Tanh_BatchNorm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "existing-incident",
+   "id": "emerging-chicken",
    "metadata": {},
    "source": [
     "## **In this notebook, we use following autoencoder for compression.**"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coordinate-entity",
+   "id": "gross-friendly",
    "metadata": {},
    "source": [
     "><ul>\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "comparable-force",
+   "id": "about-dimension",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "driven-fever",
+   "id": "hollywood-glucose",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +66,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dental-strength",
+   "metadata": {},
+   "source": [
+    ">### **Data Preparation**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "narrative-exclusive",
+   "id": "present-guinea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "electronic-strengthening",
+   "id": "split-packet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "specialized-anaheim",
+   "id": "insured-happening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "super-russia",
+   "id": "characteristic-traveler",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "particular-designer",
+   "id": "heard-bonus",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "varying-personal",
+   "id": "collective-manor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "photographic-machine",
+   "id": "instructional-makeup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,9 +334,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fourth-breeding",
+   "metadata": {},
+   "source": [
+    ">### **Model Preparation**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "promotional-basis",
+   "id": "resistant-cause",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "nearby-kruger",
+   "id": "understood-background",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "alpha-second",
+   "id": "hybrid-pontiac",
    "metadata": {},
    "outputs": [
     {
@@ -425,9 +441,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "practical-palestinian",
+   "metadata": {},
+   "source": [
+    ">### **Begin Training**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "lasting-wichita",
+   "id": "pleased-translation",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "hearing-palace",
+   "id": "invalid-practitioner",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cosmetic-distance",
+   "id": "angry-workplace",
    "metadata": {},
    "outputs": [
     {
@@ -891,9 +915,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "chemical-punishment",
+   "metadata": {},
+   "source": [
+    ">### **Saving Model**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "supposed-sucking",
+   "id": "dangerous-overall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,9 +934,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "scheduled-uncertainty",
+   "metadata": {},
+   "source": [
+    ">### **Visualize and Analyze the model predictions**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "circular-elder",
+   "id": "younger-complexity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "prerequisite-adult",
+   "id": "third-simple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "large-murray",
+   "id": "coral-picture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "existing-minimum",
+   "id": "charged-hawaiian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "descending-examination",
+   "id": "surprising-ribbon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "perceived-techno",
+   "id": "broken-transformation",
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "exempt-swimming",
+   "id": "decimal-puppy",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "solid-replica",
+   "id": "straight-corrections",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "pregnant-ratio",
+   "id": "circular-glucose",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "chubby-business",
+   "id": "satisfactory-breathing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "exotic-hamburg",
+   "id": "serial-brick",
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "automated-instrument",
+   "id": "blocked-remark",
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "fourth-overall",
+   "id": "typical-nowhere",
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "sensitive-cartoon",
+   "id": "prime-liver",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "visible-cooper",
+   "id": "spiritual-duration",
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coordinate-lease",
+   "id": "still-catch",
    "metadata": {},
    "outputs": [],
    "source": []
