Adding more descriptions of different stages

--- a/AE_3D_200_Elu_BatchNorm.ipynb
+++ b/AE_3D_200_Elu_BatchNorm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "important-partner",
+   "id": "julian-equivalent",
    "metadata": {},
    "source": [
     "## **In this notebook, we use following autoencoder for compression.**"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "false-atlas",
+   "id": "virgin-fever",
    "metadata": {},
    "source": [
     "><ul>\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "trained-fundamentals",
+   "id": "chinese-adobe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "commercial-secretary",
+   "id": "little-genome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +66,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "female-earth",
+   "metadata": {},
+   "source": [
+    ">### **Data Preparation**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "blond-crawford",
+   "id": "danish-colon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "therapeutic-respondent",
+   "id": "corrected-milton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dominican-connecticut",
+   "id": "novel-percentage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "acoustic-durham",
+   "id": "historic-folder",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "tribal-merchandise",
+   "id": "aging-wrapping",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "tropical-bridal",
+   "id": "ongoing-limitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "theoretical-lending",
+   "id": "separated-intention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,9 +334,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "pursuant-perception",
+   "metadata": {},
+   "source": [
+    ">### **Model Preparation**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "electric-pakistan",
+   "id": "grave-oxygen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "damaged-illustration",
+   "id": "little-workplace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "lonely-convergence",
+   "id": "thousand-discharge",
    "metadata": {},
    "outputs": [
     {
@@ -425,9 +441,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "distributed-round",
+   "metadata": {},
+   "source": [
+    ">### **Begin Training**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "forbidden-caribbean",
+   "id": "continental-choir",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "chubby-nutrition",
+   "id": "light-biology",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "personal-grammar",
+   "id": "golden-serbia",
    "metadata": {},
    "outputs": [
     {
@@ -891,9 +915,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "separated-family",
+   "metadata": {},
+   "source": [
+    ">### **Saving Model**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "broadband-clark",
+   "id": "tired-stomach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,9 +934,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eligible-possession",
+   "metadata": {},
+   "source": [
+    ">### **Visualize and Analyze the model predictions**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "outer-antigua",
+   "id": "downtown-quest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "hourly-puzzle",
+   "id": "common-table",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "located-antique",
+   "id": "aggregate-veteran",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "agreed-benjamin",
+   "id": "duplicate-contamination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ancient-browser",
+   "id": "verbal-characterization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "celtic-render",
+   "id": "eleven-pavilion",
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "tested-editor",
+   "id": "minor-arrival",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "sonic-species",
+   "id": "strong-quantum",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "rational-intention",
+   "id": "moved-blackjack",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "liked-constant",
+   "id": "resident-trash",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "crude-texas",
+   "id": "interesting-nerve",
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "turkish-cleaning",
+   "id": "expected-chemical",
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "systematic-morocco",
+   "id": "exciting-innocent",
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "organized-intro",
+   "id": "distributed-willow",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "trained-daniel",
+   "id": "periodic-rover",
    "metadata": {},
    "outputs": [
     {
