--- a/AE_3D_200_Tanh.ipynb
+++ b/AE_3D_200_Tanh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dramatic-hungarian",
+   "id": "homeless-turkish",
    "metadata": {},
    "source": [
     "## **In this notebook, we use following autoencoder for compression.**"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incoming-manhattan",
+   "id": "figured-automation",
    "metadata": {},
    "source": [
     "><ul>\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "welsh-greensboro",
+   "id": "supported-outside",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "yellow-fluid",
+   "id": "massive-custom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +66,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "representative-cheat",
+   "metadata": {},
+   "source": [
+    ">### **Data Preparation**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "thick-occurrence",
+   "id": "royal-reaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "photographic-display",
+   "id": "drawn-killer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "stunning-conference",
+   "id": "increased-grass",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "controversial-australia",
+   "id": "split-hardwood",
    "metadata": {},
    "outputs": [
     {
@@ -205,9 +213,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "satisfied-franchise",
+   "metadata": {},
+   "source": [
+    ">#### **Brief look into the data**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "substantial-pittsburgh",
+   "id": "naughty-longer",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "unknown-assets",
+   "id": "asian-dominican",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ordinary-albania",
+   "id": "surgical-piano",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,9 +342,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "combined-architecture",
+   "metadata": {},
+   "source": [
+    ">### **Model Preparation**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "varying-contest",
+   "id": "placed-hawaii",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "harmful-gibson",
+   "id": "expired-greeting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "technical-poster",
+   "id": "threaded-extent",
    "metadata": {},
    "outputs": [
     {
@@ -411,9 +435,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "another-glenn",
+   "metadata": {},
+   "source": [
+    ">### **Begin Training**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "documented-nitrogen",
+   "id": "stainless-undergraduate",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "detailed-massachusetts",
+   "id": "rotary-mediterranean",
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "continued-offset",
+   "id": "ultimate-curve",
    "metadata": {},
    "outputs": [
     {
@@ -877,9 +909,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "amazing-authorization",
+   "metadata": {},
+   "source": [
+    ">### **Saving Model**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "activated-vehicle",
+   "id": "separated-incentive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,9 +928,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "manufactured-treatment",
+   "metadata": {},
+   "source": [
+    ">### **Visualize and Analyze the model predictions**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "iraqi-algebra",
+   "id": "religious-supply",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "cathedral-parallel",
+   "id": "orange-flavor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "quick-planet",
+   "id": "descending-anderson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "integral-relaxation",
+   "id": "egyptian-accommodation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "inner-ultimate",
+   "id": "tired-afghanistan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "floating-nutrition",
+   "id": "likely-wrist",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "opposite-centre",
+   "id": "mediterranean-bradley",
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "scenic-digit",
+   "id": "engaged-transparency",
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "perfect-leone",
+   "id": "demanding-bosnia",
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "amazing-bikini",
+   "id": "persistent-actor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "intelligent-metadata",
+   "id": "efficient-highlight",
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "owned-orange",
+   "id": "compound-package",
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "british-nation",
+   "id": "reported-allah",
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "banner-header",
+   "id": "standing-equation",
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "tracked-plumbing",
+   "id": "acquired-figure",
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "passive-consortium",
+   "id": "basic-pioneer",
    "metadata": {},
    "outputs": [],
    "source": []
